# mubble

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  api-client.md  basic-concepts.md  bot-structure.md  callback-queries.md  contributing.md  dispatching.md  error-handling.md  formatting.md  global-context.md  handlers.md  i18n.md  inline-keyboards.md  installation.md  keyboards.md  license.md  loop-wrapper.md  middleware.md  quickstart.md  rules.md  state-management.md  types.md  webhooks.md
docs/english/: dispatch.md  keyboards.md  middleware.md
docs/ukrainian/: image.md  keyboards.md  middleware.md
examples/: start.md
examples/callback_data_map/: app.py
examples/callback_query/: app.py
examples/chat_join/: app.py
examples/checkbox/: app.py
examples/choice/: app.py
examples/command/: app.py
examples/custom_rules/: app.py
examples/download_file/: app.py
examples/english/: image.md
examples/error_handler/: app.py
examples/event_node/: app.py
examples/forward_msg/: app.py
examples/invoice/: app.py
examples/keyboard/: app.py
examples/loop_wrapper/: app.py
examples/middlewares/: app.py
examples/reply_handlers/: app.py
examples/ukrainian/: dispatch.md  image.md
examples/uploader/: app.py
mubble/: __init__.py  model.py  modules.py  msgspec_json.py  msgspec_utils.py  verification_utils.py
mubble/api/: abc.py  api.py  response.py  token.py
mubble/bot/: __init__.py  bot.py
mubble/bot/cute_types/: __init__.py  base.py  callback_query.py  chat_join_request.py  chat_member_updated.py  inline_query.py  message.py  pre_checkout_query.py  update.py  utils.py
mubble/bot/dispatch/: __init__.py  abc.py  composition.py  context.py  dispatch.py  process.py  waiter.py
mubble/bot/polling/: abc.py  polling.py
mubble/bot/rules/: __init__.py  abc.py  callback_data.py  chat_join.py  command.py  enum_text.py  func.py  fuzzy.py  id.py  inline.py  integer.py  is_from.py  markup.py  mention.py  message.py  message_entities.py  node.py  payload.py  payment_invoice.py  regex.py  rule_enum.py  start.py  state.py  text.py  update.py
mubble/bot/scenario/: abc.py  checkbox.py  choice.py
mubble/client/: abc.py  aiohttp.py  form_data.py  sonic.py
mubble/node/: __init__.py  attachment.py  base.py  callback_query.py  command.py  composer.py  container.py  either.py  event.py  file.py  me.py  message.py  payload.py  polymorphic.py  pre_checkout_query.py  rule.py  source.py  text.py  update.py
mubble/node/tools/: generator.py
mubble/tools/: __init__.py  buttons.py  input_file_directory.py  input_file_manager.py  keyboard.py  lifespan.py  magic.py
mubble/tools/adapter/: __init__.py  abc.py  dataclass.py  event.py  node.py  raw_event.py  raw_update.py
mubble/tools/callback_data_serilization/: json_ser.py  msgpack_ser.py
mubble/types/: __init__.py  input_file.py  methods.py  objects.py
(+69 files in other folders)
