[tool.poetry]
name = "mubble"
version = "0.1"
description = "Async Telegram framework for bot building"
authors = ["vladislavkovalskyi <vladislavkovalskyi@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
vbml = "^1.1.post1"
aiohttp = "^3.8.1"
requests = "^2.28.1"
msgspec = "^0.9.0"
choicelib = "^0.1.5"
certifi = "^2022.6.15"
PyYAML = "^6.0"
envparse = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
