[tool.poetry]
name = "mubble"
version = "1.2.3"
description = "Async Telegram framework for bot building"
readme = "README.md"
authors = ["vladislavkovalskyi <vladislavkovalskyi@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
vbml = "^1.1.post1"
aiohttp = "^3.8.1"
requests = "^2.28.1"
msgspec = "^0.18.6"
envparse = "^0.2.0"
PyYAML = "^6.0"
choicelib = "^0.1.5"
certifi = "^2024.2.2"
colorama = "^0.4.0"
typing-extensions = "^4.10.0"
fntypes = "^0.1.2.post2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
