[tool.poetry]
name = "mubble"
version = "1.5.1"
description = "Async Telegram framework for bot building"
readme = "README.md"
authors = ["vladislavkovalskyi <vladislavkovalskyi@icloud.com>"]
maintainers = ["vladislavkovalskyi <vladislavkovalskyi@icloud.com>"]
license = "MIT"
repository = "https://github.com/vladislavkovalskyi/mubble"
homepage = "https://github.com/vladislavkovalskyi/mubble"
keywords = [
    "asyncio",
    "async",
    "bot api",
    "telegram",
    "telegram bot api",
    "telegram framework",
    "mubble",
    "best framework",
    "mubble framework",
    "bot building",
    "bot building framework"
]


[tool.poetry.dependencies]
python = "^3.12"
vbml = "^1.1.post1"
aiohttp = "^3.8.1"
msgspec = "^0.18.6"
envparse = "^0.2.0"
PyYAML = "^6.0"
choicelib = "^0.1.5"
certifi = "^2024.2.2"
colorama = "^0.4.0"
typing-extensions = "^4.10.0"
fntypes = "^0.1.4"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
requests = "^2.28.1"
sort-all = "^1.2.0"
libcst = "^1.4.0"
pytest = "^8.0.0"
pytest-asyncio = ">=0.23.5,<0.26.0"
pytest-cov = ">=5,<7"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mubble = "mubble.tools.cli.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
exclude = [
  "**/__pycache__",
  "docs",
  "local",
]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = false